--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.5",
   "description": "A sample Node.js app using Express 4",
   "engines": {
-    "nodejs": "0.10.29"
+    "node": "0.10.29"
   },
   "main": "index.js",
   "scripts": {
