--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.4.1",
+    "cors":"latest",
     "express": "4.13.3"
   },
   "repository": {
