--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.4.1",
     "cors":"latest",
+    "needle":"latest",
     "express": "4.13.3"
   },
   "repository": {
