--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "cool-ascii-faces": "1.3.4",
-    "cors": "latest",
     "ejs": "2.4.1",
     "express": "4.13.3",
-    "needle": "latest"
+    "needle": "latest",
+    "mongodb": "latest"
   },
   "repository": {
     "type": "git",
